webmin/addons/etc/webmin/firewall/iptables.save
# Generated by iptables-save v1.3.5 on Sat Mar  3 23:39:24 2007
*nat
:PREROUTING ACCEPT [15:4242]
:POSTROUTING ACCEPT [13:1286]
:OUTPUT ACCEPT [13:1286]
COMMIT
# Completed on Sat Mar  3 23:39:24 2007
# Generated by iptables-save v1.3.5 on Sat Mar  3 23:39:24 2007
*mangle
:PREROUTING ACCEPT [108:14537]
:INPUT ACCEPT [95:10387]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [95:10315]
:POSTROUTING ACCEPT [95:10315]
COMMIT
# Completed on Sat Mar  3 23:39:24 2007
# Generated by iptables-save v1.3.5 on Sat Mar  3 23:39:24 2007
*filter
:FORWARD ACCEPT [0:0]
:INPUT DROP [0:0]
:OUTPUT ACCEPT [0:0]
# Accept traffic from internal interfaces
-A INPUT ! -i eth0 -j ACCEPT
# Accept traffic with the ACK flag set
-A INPUT -p tcp -m tcp --tcp-flags ACK ACK -j ACCEPT
# Allow incoming data that is part of a connection we established
-A INPUT -m state --state ESTABLISHED -j ACCEPT
# Allow data that is related to existing connections
-A INPUT -m state --state RELATED -j ACCEPT
# Accept responses to DNS queries
-A INPUT -p udp -m udp --dport 1024:65535 --sport 53 -j ACCEPT
# Accept responses to our pings
-A INPUT -p icmp -m icmp --icmp-type echo-reply -j ACCEPT
# Accept notifications of unreachable hosts
-A INPUT -p icmp -m icmp --icmp-type destination-unreachable -j ACCEPT
# Accept notifications to reduce sending speed
-A INPUT -p icmp -m icmp --icmp-type source-quench -j ACCEPT
# Accept notifications of lost packets
-A INPUT -p icmp -m icmp --icmp-type time-exceeded -j ACCEPT
# Accept notifications of protocol problems
-A INPUT -p icmp -m icmp --icmp-type parameter-problem -j ACCEPT
COMMIT
# Completed on Sat Mar  3 23:39:24 2007
